src/test/ui/overlap-marker-trait.stderr
error[E0277]: the trait bound `NotDebugOrDisplay: Marker` is not satisfied
  --> $DIR/overlap-marker-trait.rs:30:5
   |
LL |     is_marker::<NotDebugOrDisplay>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Marker` is not implemented for `NotDebugOrDisplay`
   |
note: required by `is_marker`
  --> $DIR/overlap-marker-trait.rs:18:1
   |
LL | fn is_marker<T: Marker>() { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
